[gd_scene load_steps=6 format=2]

[ext_resource path="res://Entities/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://DebugAssets/debug-ball.png" type="Texture" id=2]
[ext_resource path="res://Entities/Player/ScoreModule/ScoreModule.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 8.0

[sub_resource type="Animation" id=2]
resource_name = "appear"
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 0.233258, 1 ),
"update": 0,
"values": [ Vector2( 1, 0 ), Vector2( 1, 1 ) ]
}

[node name="Player" type="KinematicBody2D"]
use_parent_material = true
collision_mask = 6
script = ExtResource( 1 )

[node name="HitSphere" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
use_parent_material = true
position = Vector2( 0.0179577, 0.0258331 )
z_index = -2
texture = ExtResource( 2 )

[node name="Tween" type="Tween" parent="."]
pause_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "appear"
anims/appear = SubResource( 2 )

[node name="ScoreModule" parent="." instance=ExtResource( 3 )]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="got_points" from="ScoreModule" to="." method="_on_ScoreModule_got_points"]
